# deathcounter_irl

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HACKING.md  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
include/: bot.hpp  config.hpp  config.hpp.in
source/: bot.cpp  main.cpp
test/: CMakeLists.txt
test/source/: deathcounter_irl_test.cpp
